# data-science-project

./: .gitignore  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts  test.ipynb
data/: ai-topic-sites-list.txt
gradle/wrapper/: gradle-wrapper.properties
notebooks/: how_todo.md  test.ipynb  testing_stemmers.ipynb
orgbooks/: ai-topic.org
pipeline/: 01_data_collection.py  02_consolidation.py  03_integration_ai_detection.py  04_cleaning.hy  05_transformation.py  06_data_mining.ipynb  06_enrichment.py  data_analysis.ipynb
python/: ai-buzzwords.csv  ai-topic-site-words.csv  ai-topic.org  domain_graph.py  embedding.ipynb  embedding.py  gen_graph.py  graph.org  prepare_dataset.ipynb  process_data.ipynb  pyproject.toml  research-questions.org  test.ipynb  test.py  v5_stats.ipynb
python/ai_detection/: prepare_dataset.ipynb  process_data.ipynb  test.ipynb
python/ai_detection/ai_training/: dataset.py  lib.py  network.py  training_ai.py
python/ai_detection/datasets/: clean_pre_labeled_data.py  emil.ipynb  final_db.ipynb  finished_data.ipynb  moltbook.ipynb  roberta.ipynb  roberts.ipynb  test.ipynb  test.py
python/ai_detection/new/: 01_data_collection.py  02_consolidation.py  03_integration_ai_detection.py  04_cleaning.hy  05_transformation.py  lib.py
python/ai_detection/random/: domain_graph_v2.py  embedding.py  test  test.py  tf_idf.ipynb
python/ai_training/: dataset.py  lib.py  network.py  preprocessor.py  training_ai.py  visualizer.py
python/data/: ai-news-response.json  newsapi-sites.txt
python/questions/: compute-word-distribution.py
python/random/: domain_graph.py  embedding.py  fingerprint.ipynb
src/main/kotlin/: Main.kt
src/main/kotlin/extension/: CoroutineExtension.kt  XmlExtension.kt
src/main/kotlin/model/: BodyKind.kt  ProtocolVersion.kt
src/main/kotlin/parquet/: ParquetSchema.kt  ParquetService.kt
src/main/kotlin/script/: GrokProcessor.kt  LanguageProcessor.kt  MigrateCrawls.kt  PrefechUrlIds.kt  ProcessAIFiles.kt  WayBackMachineCrawler.kt
src/main/kotlin/scripts/: MigrateCrawls.kt  PrefechUrlIds.kt  ProcessCrawls.kt
src/main/kotlin/service/: GrokService.kt  ModrinthService.kt  ProxyService.kt  RocksDBService.kt  StemService.kt  UrlService.kt
src/main/resources/: grokipedia_urls.jsonl  logback.xml
website/data-science-website/: astro.config.mjs  package.json  tsconfig.json
(+124 files in other folders)
