[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "igraph>=0.11.8",
    "matplotlib>=3.10.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.2.2.240807",
    "networkx>=3.4.0",
    "polars>=1.24.0",
    "pyarrow>=21.0.0",
    "tldextract>=5.1.0",
    "torch>=2.0.0",
    "tqdm>=4.67.0",
    "transformers>=5.0.0",
    "triton-rocm>=3.6.0; sys_platform == 'linux'",
    "ipykernel>=7.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "networkit>=11.2.1",
    "warcio>=1.7.5",
    "ipywidgets>=8.1.8",
    "isal>=1.8.0",
    "mwparserfromhell>=0.7.2",
    "optimum>=2.1.0",
    "onnxruntime>=1.24.3",
    "pycld2>=0.42",
    "pqdm>=0.2.0",
    "hy>=1.2.0",
    "fastwarc>=0.15.2",
    "trafilatura>=2.0.0",
    "fast-langdetect>=1.0.0",
    "selectolax>=0.4.7",
    "line-profiler>=5.0.2",
    "hyrule>=1.0.1",
    "stemmer>=0.0.4",
    "pystemmer>=3.0.0",
    "nltk>=3.9.3",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
triton-rocm = { index = "pytorch-rocm" }
