[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "igraph>=0.11.8",
    "matplotlib>=3.10.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.2.2.240807",
    "networkx>=3.4.0",
    "polars>=1.24.0",
    "pyarrow>=21.0.0",
    "tldextract>=5.1.0",
    "tqdm>=4.67.0",
]
