[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "igraph>=0.11.8",
    "matplotlib>=3.10.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.2.2.240807",
    "networkx>=3.4.0",
    "polars>=1.24.0",
    "pyarrow>=21.0.0",
    "tldextract>=5.1.0",
    "torch>=2.0.0",
    "tqdm>=4.67.0",
    "transformers>=5.0.0",
    "triton-rocm>=3.6.0; sys_platform == 'linux'",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
triton-rocm = { index = "pytorch-rocm" }
